[tool.poetry]
name = "performance-test"
version = "0.1.0"
description = ""
authors = ["Coldot <41678750+Coldot@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
locust = "^2.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
