[tool.poetry]
name = "performance-test"
version = "0.1.0"
description = ""
authors = ["Coldot <41678750+Coldot@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
locust = "^2.29.1"
websocket-client = "^1.8.0"
stomper = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
